Changes: Add Loot Table Support